--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-<html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 <body>
-<h1>StackOverflow Bot</h1>
-<h2>Visit me at: <a href="https://www.twitter.com/ScalaAtStack">ScalaAtStackOverflow</a></h2>
-<h3>Maintained By: <a href="https://www.twitter.com/Internity_learn">InternityFoundation</a></h3>
+  <div class="container" >
+<h1 align="center" style="margin-top:10%;font-weight:400">StackOverflow Bot</h1>
+<hr>
+    <h4 align="center" style="margin-top:10%;font-weight:400">Visit me at: </br><a href="https://www.twitter.com/ScalaAtStack">ScalaAtStackOverflow</a></h4>
+<h5 align="center" style="margin-top:20%;font-weight:400">Maintained By: <a href="https://www.twitter.com/Internity_learn">InternityFoundation</a></h5>
+  </div>
 </body>
 </html>
